horizontal scrolling fix and layout adjustment

--- a/styles/style.css
+++ b/styles/style.css
@@ -18,13 +18,15 @@
 
 .address {
     display: block;
-    margin-left: 188px;
+
     margin-bottom: 10px;
     font-style: normal;
+    min-width: 0;
 }
 
 .header-address {
     grid-area: 1 / 3 / 2 / 4;
+    margin-left: 55px;
 }
 
 .address_list {
@@ -37,8 +39,12 @@
 }
 
 .address-text {
-margin-right: 100px;
+
+    display: inline;
+    max-width: 100%;
 }
+
+
 
 .nav {
     grid-area: 1 / 1 / 2 / 2;
@@ -126,25 +132,28 @@ margin-right: 100px;
 .grid {
     display: grid;
     grid-template-columns: 330px 1fr 1fr;
-    margin: 0 50px;
+    margin: 0 auto;
+    max-width: 1200px;
     padding-top: 165px;
 }
 
 .cover-title--word-left {
     grid-area: 1 / 1 / 2 / 2;
+    margin-left: 50px;
 }
 
 .cover-title--word-center {
     margin-top:20px;
+    margin-left: 50px;
     grid-area: 2 / 2 / 3 / 3;
 }
 
 .cover-title--word-right {
     grid-area:   3 / 2 / 4 / 4;
     margin-top: 20px;
+    padding-right: 20px;
     display: block;
     text-align: right;
-    margin-right: -0.3em;
 }
 
 
@@ -159,15 +168,15 @@ margin-right: 100px;
 }
 .hero_text {
     margin-top: 120px;
+    margin-left: 50px;
     color: white;
-    max-width: 637px;
+    max-width: 100%;
     width: 100%;
     font-size: 22px;
     font-family: 'Raleway', 'Arial', sans-serif;
     font-weight: 400;
     text-transform: uppercase;
     word-spacing: 19px;
-
     grid-area: 4 / 1 / 5 / 3;
 }
 
@@ -376,7 +385,7 @@ margin-right: 100px;
 }
 
 .nav-footer {
-    margin-left: 80px;
+    margin-left: 105px;
 }
 
 .nav-list-footer {
@@ -388,7 +397,7 @@ margin-right: 100px;
 
 
 .social {
-    margin-left: 65px;
+    margin-left: 80px;
 }
 
 .social-list {
